recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:11: error: not found: value g
				g
                                ^